wip: add images

--- a/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
+++ b/src/docs/5.37.x/page-builder/extending/lexical-editor-configuration-api.mdx
@@ -3,6 +3,11 @@ title: Webiny Lexical Editor Configuration API
 description: Introduction to Lexical Editor Configuration API.
 ---
 
+import lexicalInPageBuilder from "./assets/lexical-editor-configuration-api/lexical-editor-in-page-builder.png";
+import lexicalInHcms from "./assets/lexical-editor-configuration-api/lexical-editor-in-headless-cms.png";
+
+import { Alert } from "@/components/Alert";
+
 <Alert type="success" title="What you'll learn">
   - We will cover the Page Builder and Headless CMS apps, and how to use Lexical Configuration API to customize the Lexical Editor.
 </Alert>
@@ -22,7 +27,11 @@ The core implementation of the Lexical editor is in `[@webiny/lexical-editor pac
 
 From the image below we can see that the user can drag&drop these two components.
 
-![Lexical Editor in Page Builder](./assets/lexical-editor-configuration-api/lexical-editor-in-page-builder.png)
+<Image
+  title="Lexical editor in Page Builder App"
+  src={lexicalInPageBuilder}
+  style={{ width: 450 }}
+/>
 
 ***The Heading component*** has a ***Lexical Editor*** configuration that is working only with heading HTML tags h1-h6.  When the user starts typing, Lexical Editor will create a <h1> tag and apply the specified typography theme styles. Every new line is starting with a new heading tag.
 
@@ -240,7 +249,11 @@ Link: [https://lexical.dev/docs/concepts/nodes](https://lexical.dev/docs/concept
 
 Webiny is using the Lexical Editor in Headless CMS to allow users to have fields with rich text content. Users can add headers, paragraphs, lists, quotes, style the content and add images.
 
-![Lexical Editor in Headless CMS](./assets/lexical-editor-configuration-api/lexical-editor-in-headless-cms.png)
+<Image
+  title="Lexical editor in Headless CMS App"
+  src={lexicalInHcms}
+  style={{ width: 450 }}
+/>
 
 The image above shows the Lexical editor in the Headless CMS. Technically we have one configuration setup for the Lexical Editor covering the rich text editing field.
 
