wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -13,6 +13,7 @@ import aaclTeams from "./assets/aacl-teams.png";
 import aaclRolesRename from "./assets/aacl-roles-rename.png";
 import fbDateTimeField from "./assets/fb-date-time-field.png";
 import fbGaTrigger from "./assets/fb-ga-trigger.png";
+import pbFixesButtonCursor from "./assets/pb-fixes-button-cursor.png"
 
 <GithubRelease version={"5.37.0"} />
 
@@ -46,9 +47,33 @@ To add an accordion to your page, simply drag and drop the Accordion element fro
 
 ✍️
 
-### ✍️ Cursor Positioning ([#3146](https://github.com/webiny/webiny-js/pull/3146))
+### Multiple Minor Fixes and Improvements
 
-✍️
+#### Addressed Cursor Positioning Issue (Button Label Input) ([#3146](https://github.com/webiny/webiny-js/pull/3146))
+
+Prior to this release, in some cases, when typing a label for a button, the cursor would jump to the end of the input field after each keystroke, preventing users from editing the label efficiently. This issue has now been addressed.
+
+<Image src={pbFixesButtonCursor} title={"Addressed Cursor Positioning Issue (Button Label Input)"} />
+
+#### ✍️ Ability to Provide a LinkedIn Profile URL ([#3362](https://github.com/webiny/webiny-js/pull/3362))
+
+#### Added Line Height To Default Heading Styles ([#3363](https://github.com/webiny/webiny-js/pull/3363))
+
+In the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file, the default heading styles now also include a line height property, set to 150% of the font size. This change was made to improve the readability of the text. 
+
+Note that this change will only affect new projects created with this release. If you want to apply this change to an existing project, you'll need to manually update the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file.
+
+#### ✍️ Block Editor - Addressed Back Button's Navigation Issue ([#3361](https://github.com/webiny/webiny-js/pull/3361))
+
+#### ✍️ Fixed Icon In the Revisions Dropdown Menu ([#3361](https://github.com/webiny/webiny-js/pull/3361))
+
+#### Removed Width Control For Blocks ([#3364](https://github.com/webiny/webiny-js/pull/3364))
+
+In the page editor, when dropping a block onto the page canvas, the block's width is now fixed to 100% of the parent container. This change was made to simplify the process of adding blocks to the page and ensure that the page layout is consistent across all devices. Manually setting the width of the block is no longer possible.
+
+#### ✍️ List of Revisions - Revisions Now Shown From Latest to Oldest ([#3379](https://github.com/webiny/webiny-js/pull/3379))
+
+#### ✍️ Fixed Setting Background Image on a Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
 
 ### Deprecating Legacy Page Rendering Engine
 
