wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -14,6 +14,8 @@ import aaclRolesRename from "./assets/aacl-roles-rename.png";
 import fbDateTimeField from "./assets/fb-date-time-field.png";
 import fbGaTrigger from "./assets/fb-ga-trigger.png";
 import pbFixesButtonCursor from "./assets/pb-fixes-button-cursor.png"
+import pbFixesRevisionsList from "./assets/pb-fixes-revisions-list.png"
+import pbFixesLinkedIn from "./assets/pb-fixes-linked-in.png"
 
 <GithubRelease version={"5.37.0"} />
 
@@ -55,7 +57,12 @@ Prior to this release, in some cases, when typing a label for a button, the curs
 
 <Image src={pbFixesButtonCursor} title={"Addressed Cursor Positioning Issue (Button Label Input)"} />
 
-#### ✍️ Ability to Provide a LinkedIn Profile URL ([#3362](https://github.com/webiny/webiny-js/pull/3362))
+#### Ability to Provide a LinkedIn Profile URL For Your Website ([#3362](https://github.com/webiny/webiny-js/pull/3362))
+
+With the already existing Facebook, Instagram, and Twitter URL fields in the Website Settings section, users can now also provide a LinkedIn profile URL for their website. 
+
+<Image src={pbFixesLinkedIn} title={"Ability to Provide a LinkedIn Profile URL"} shadow={false}/>
+
 
 #### Added Line Height To Default Heading Styles ([#3363](https://github.com/webiny/webiny-js/pull/3363))
 
@@ -63,17 +70,28 @@ In the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/pac
 
 Note that this change will only affect new projects created with this release. If you want to apply this change to an existing project, you'll need to manually update the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file.
 
-#### ✍️ Block Editor - Addressed Back Button's Navigation Issue ([#3361](https://github.com/webiny/webiny-js/pull/3361))
+#### Block Editor - Addressed Back Button's Navigation Issue ([#3361](https://github.com/webiny/webiny-js/pull/3361))
 
-#### ✍️ Fixed Icon In the Revisions Dropdown Menu ([#3361](https://github.com/webiny/webiny-js/pull/3361))
+Prior to this release, the back button in the block editor (located in the top-left corner of the screen) would sometimes navigate users to the wrong page. This issue has now been addressed.
+
+#### Fixed Icon In the Revisions Dropdown Menu ([#3361](https://github.com/webiny/webiny-js/pull/3361))
+
+Prior to this release, the icon in the revisions dropdown menu was not aligned properly. This issue has now been addressed.
 
 #### Removed Width Control For Blocks ([#3364](https://github.com/webiny/webiny-js/pull/3364))
 
 In the page editor, when dropping a block onto the page canvas, the block's width is now fixed to 100% of the parent container. This change was made to simplify the process of adding blocks to the page and ensure that the page layout is consistent across all devices. Manually setting the width of the block is no longer possible.
 
-#### ✍️ List of Revisions - Revisions Now Shown From Latest to Oldest ([#3379](https://github.com/webiny/webiny-js/pull/3379))
+#### List of Revisions - Revisions Now Shown From Latest to Oldest ([#3379](https://github.com/webiny/webiny-js/pull/3379))
 
-#### ✍️ Fixed Setting Background Image on a Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
+Prior to this release, the list of revisions in the revisions tab would show the revisions from oldest to newest. This has now been changed, and the revisions are now shown from newest to oldest.
+
+<Image src={pbFixesRevisionsList} title={"List of Revisions - Revisions Now Shown From Latest to Oldest"} />
+
+
+#### Fixed Setting Background Image on a Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
+
+In the page editor, setting a background image on a page element would not work properly in some cases. This issue has now been addressed.
 
 ### Deprecating Legacy Page Rendering Engine
 
