wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -16,6 +16,7 @@ import fbGaTrigger from "./assets/fb-ga-trigger.png";
 import pbFixesButtonCursor from "./assets/pb-fixes-button-cursor.png"
 import pbFixesRevisionsList from "./assets/pb-fixes-revisions-list.png"
 import pbFixesLinkedIn from "./assets/pb-fixes-linked-in.png"
+import pbCellMirroring from "./assets/pb-cell-mirroring.png"
 
 <GithubRelease version={"5.37.0"} />
 
@@ -45,11 +46,15 @@ To add an accordion to your page, simply drag and drop the Accordion element fro
 
 <Image src={pageElementAccordion} title={"Accordion Page Element"} />
 
-### ✍️ Cell Mirroring ([#3145](https://github.com/webiny/webiny-js/pull/3145))
+### Cell Mirroring ([#3145](https://github.com/webiny/webiny-js/pull/3145))
 
-✍️
+With this release, we've introduced the new **Cell Mirroring** feature, which allows users to mirror the content of a cell to another cell. This is useful when you want to quickly duplicate the content of a cell to another cell, without having to copy and paste the content manually.
+
+<Image src={pbCellMirroring} title={"Cell Mirroring"} />
 
 ### Multiple Minor Fixes and Improvements
+
+The following is a list of minor fixes and improvements that were made to the Page Builder app in this release.
 
 #### Addressed Cursor Positioning Issue (Button Label Input) ([#3146](https://github.com/webiny/webiny-js/pull/3146))
 
