wip: create 5.37.0 release notes

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -100,7 +100,7 @@ Prior to this release, the list of revisions in the revisions tab would show the
 <Image src={pbFixesRevisionsList} title={"List of Revisions - Revisions Now Shown From Latest to Oldest"} />
 
 
-#### Fixed Setting Background Image on a Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
+#### Fixed Setting Background Image on Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
 
 In the page editor, setting a background image on a page element would not work properly in some cases. This issue has now been addressed.
 
