--- a/src/docs/5.35.x/enterprise/auth0-integration.mdx
+++ b/src/docs/5.35.x/enterprise/auth0-integration.mdx
@@ -221,10 +221,10 @@ With this, you're ready to deploy the project. To deploy the whole project, run 
 yarn webiny deploy --env=dev
 ```
 
-Or deploy just the `api` and `admin` by running:
+Or deploy just **API** and **Admin** project applications by running:
 
 ```shell
-yarn webiny deploy apps/api --env=dev && yarn webiny deploy apps/admin --env=dev
+yarn webiny deploy api,admin --env=dev
 ```
 
 ## 5) Configuring App Client ID for New Tenants
