fix: simplify deploy cmds

--- a/src/docs/5.34.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
+++ b/src/docs/5.34.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
@@ -126,13 +126,13 @@ Open the `apps/theme/global.scss` file that exports all theme styles, and add Ta
 That's all! Now, start your **Website** `(apps/website)` app locally, by running:
 
 ```
-yarn webiny watch apps/website --env dev
+yarn webiny watch website --env dev
 ```
 
 Or build it (which happens automatically for you when you deploy your application using `webiny deploy` command):
 
 ```
-yarn webiny deploy apps/website --env {environment}
+yarn webiny deploy website --env {environment}
 ```
 
 Tailwind CSS is ready to use in your Webiny project.
