--- a/src/docs/5.34.x/enterprise/auth0-integration.mdx
+++ b/src/docs/5.34.x/enterprise/auth0-integration.mdx
@@ -336,7 +336,7 @@ yarn webiny deploy --env=dev
 Or deploy just the `api` and `admin` by running:
 
 ```shell
-yarn webiny deploy apps/api --env=dev && yarn webiny deploy apps/admin --env=dev
+yarn webiny deploy api --env=dev && yarn webiny deploy admin --env=dev
 ```
 
 ## 5) Configuring App Client ID for New Tenants
