--- a/src/docs/5.34.x/enterprise/theme-manager.mdx
+++ b/src/docs/5.34.x/enterprise/theme-manager.mdx
@@ -232,7 +232,7 @@ export const App: React.FC = () => {
 Once the code changes are done, deploy your Admin and Website apps, by running:
 
 ```shell
-yarn webiny deploy apps/admin --env=dev && yarn webiny deploy apps/website --env=dev
+yarn webiny deploy admin --env=dev && yarn webiny deploy website --env=dev
 ```
 
 <Alert type="info" >
