--- a/src/docs/5.34.x/infrastructure/basics/best-practices.mdx
+++ b/src/docs/5.34.x/infrastructure/basics/best-practices.mdx
@@ -60,7 +60,7 @@ In certain cases, it might be hard to determine if the change will be destructiv
 We highly encourage users to run the deploy command with the `--preview` flag when making such changes. The preview flag will display a list of resources that will be added, modified or removed. This way you can check ahead of time if the change will potentially be destructive for your environment. 
 
 ```terminal
-yarn webiny deploy apps/api --env dev --preview
+yarn webiny deploy api --env dev --preview
 ```
 
 <Alert type="info">
