--- a/src/docs/5.35.x/core-development-concepts/basics/project-deployment.mdx
+++ b/src/docs/5.35.x/core-development-concepts/basics/project-deployment.mdx
@@ -75,10 +75,10 @@ yarn webiny deploy --env prod
 To deploy a specific project application, located within your Webiny project, simply append the path to the folder in which the project application resides, for example:
 
 ```bash
-yarn webiny deploy apps/core --env dev
-yarn webiny deploy apps/api --env dev
-yarn webiny deploy apps/admin --env dev
-yarn webiny deploy apps/website --env dev
+yarn webiny deploy core --env dev
+yarn webiny deploy api --env dev
+yarn webiny deploy admin --env dev
+yarn webiny deploy website --env dev
 ```
 
 Note that when deploying a specific project application, the environment (`--env`) parameter is not optional. It must always be provided.
@@ -97,7 +97,7 @@ For example, to list all cloud infrastructure resources deployed as part of the 
 application, deployed into the `dev` environment, you can run the following command:
 
 ```bash
-yarn webiny pulumi apps/api --env dev -- stack --show-ids
+yarn webiny pulumi api --env dev -- stack --show-ids
 ```
 
 Running the above command should produce the following output:
@@ -108,8 +108,8 @@ Similarly, you can use the following commands to list all cloud infrastructure r
 deployed as part of the **Admin Area** and **Website** project applications, into the `dev` environment:
 
 ```bash
-yarn webiny pulumi apps/admin --env dev -- stack --show-ids
-yarn webiny pulumi apps/website --env dev -- stack --show-ids
+yarn webiny pulumi admin --env dev -- stack --show-ids
+yarn webiny pulumi website --env dev -- stack --show-ids
 ```
 
 <Alert type="info">
@@ -136,7 +136,7 @@ To learn more, please check out the [Modify Cloud Infrastructure](/docs/5.29.x/i
 If you run into an error while running the `webiny deploy` command, to get additional information and logs about it, you can append the `--debug` argument. For example:
 
 ```bash
-yarn webiny deploy apps/api --env dev --debug
+yarn webiny deploy api --env dev --debug
 ```
 
 This can significantly help in debugging underlying deployment ([Pulumi](../../infrastructure/pulumi-iac/iac-with-pulumi)) errors, since without it, in some cases the returned error report doesn't contain enough useful information. We've also seen cases in which the report would actually be misleading and even incorrect, making the debugging process much harder for the user.
@@ -175,7 +175,7 @@ The following are some of the reasons why you might be receiving this error:
 1. you didn't verify your phone number
 2. you didn't verify your payment method
 3. you didn't select a support subscription (free or other)
-4. if you created a brand new AWS account, it wasn't yet processed on the AWS side
+4. if you created a new AWS account, it wasn't yet processed on the AWS side
 
 The account signup and verification process can be completed via https://portal.aws.amazon.com/billing/signup?type=resubscribe#/resubscribed.
 
@@ -207,10 +207,10 @@ If you didn't install the Pulumi CLI manually by yourself, which is usually the 
 
 ```bash
 # Export state files for "apps/website" project application ("dev" environment).
-yarn webiny pulumi apps/website --env dev -- stack export
+yarn webiny pulumi website --env dev -- stack export
 
 # Export state files for the "api" project application ("prod" environment).
-yarn webiny pulumi apps/api --env prod -- stack export
+yarn webiny pulumi api --env prod -- stack export
 ```
 
 <Alert type="info">
