--- a/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
@@ -109,7 +109,7 @@ export default plugin;
 Run the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to start a new watch session on `apps/admin` application code.
 
 ```
-yarn webiny watch apps/admin --env dev
+yarn webiny watch admin --env dev
 ```
 
 This command will build our application and will serve the **Admin Area** application locally. It will also detect all changes in `apps/admin` and live rebuild the application.
@@ -259,7 +259,7 @@ export default plugin;
 4. Deploy the API changes, run the [`webiny watch`](../../core-development-concepts/basics/watch-command) command to start a new watch session on `apps/api/graphql` application code.
 
 ```
-yarn webiny watch apps/api --env dev
+yarn webiny watch api --env dev
 ```
 
 Super, we are all set to use our new field in the CMS model. At this stage, our custom field will behave like a normal text.
