feat: add file manager and development sections

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -4,6 +4,7 @@ title: Webiny 5.37.0 Changelog
 description: See what's new in Webiny version 5.37.0.
 ---
 
+import { Gallery } from "@/components/Image";
 import pageElementAccordion from "./assets/page-element-accordion.png";
 import pageElementTab from "./assets/page-element-tab.png";
 import pageElementCarousel from "./assets/page-element-carousel.png";
@@ -24,9 +25,33 @@ import hcmsLegacyRteLook from "./assets/hcms-legacy-rte-look.png";
 import hcmsFieldSettingWithFeatureFlag from "./assets/hcms-field-setting-feature-flag-set.png";
 import hcmsFieldSettingRemovedFeatureFlag from "./assets/hcms-field-settings-removed-flag.png";
 import hcmsRemoveFeatureFlag from "./assets/hcms-remove-feture-flag.png";
+import fmGridView from "./assets/fm-grid-view.png";
+import fmTableView from "./assets/fm-table-view.png";
+import fmFileDetails from "./assets/fm-file-details.png";
 
 
 <GithubRelease version={"5.37.0"} />
+
+## File Manager
+
+This release marks a major milestone for our File Manager app. We've made significant UI improvements, and exposed various developer-oriented APIs. The following are some of the improvements that were introduced:
+
+- advanced file organization using folders
+- ability to add custom filters (via code plugins)
+- ability to extend file data with custom fields (and use them for filtering and searching)
+- ability to download the original file
+- redesigned file details view
+- support for `webp` files
+- filtering using tags using `Match all` or `Match any` mode
+- programmatic API to interact with the File Manager from your React plugins
+
+<Gallery>
+  <Image title={"Grid View"} src={fmGridView} />
+  <Image title={"Table View"} src={fmTableView} />
+  <Image title={"File Details"} src={fmFileDetails} />
+</Gallery>
+
+All of these improvements take our File Manager to the next level. But the big change that enabled us to do many of the things listed above, is under the hood of it all: File Manager is now powered by our own Headless CMS! Each file record is actually a content entry under the hood, which means that File Manager API supports all the same querying capabilities as our Headless CMS.
 
 ## Headless CMS
 
@@ -118,18 +143,20 @@ The following is a list of minor fixes and improvements that were made to the Pa
 
 Prior to this release, in some cases, when typing a label for a button, the cursor would jump to the end of the input field after each keystroke, preventing users from editing the label efficiently. This issue has now been addressed.
 
-<Image src={pbFixesButtonCursor} title={"Addressed Cursor Positioning Issue (Button Label Input)"} />
+<Image
+  src={pbFixesButtonCursor}
+  title={"Addressed Cursor Positioning Issue (Button Label Input)"}
+/>
 
 #### Ability to Provide a LinkedIn Profile URL For Your Website ([#3362](https://github.com/webiny/webiny-js/pull/3362))
 
-With the already existing Facebook, Instagram, and Twitter URL fields in the Website Settings section, users can now also provide a LinkedIn profile URL for their website. 
+With the already existing Facebook, Instagram, and Twitter URL fields in the Website Settings section, users can now also provide a LinkedIn profile URL for their website.
 
-<Image src={pbFixesLinkedIn} title={"Ability to Provide a LinkedIn Profile URL"} shadow={false}/>
-
+<Image src={pbFixesLinkedIn} title={"Ability to Provide a LinkedIn Profile URL"} shadow={false} />
 
 #### Added Line Height To Default Heading Styles ([#3363](https://github.com/webiny/webiny-js/pull/3363))
 
-In the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file, the default heading styles now also include a line height property, set to 150% of the font size. This change was made to improve the readability of the text. 
+In the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file, the default heading styles now also include a line height property, set to 150% of the font size. This change was made to improve the readability of the text.
 
 Note that this change will only affect new projects created with this release. If you want to apply this change to an existing project, you'll need to manually update the [`apps/theme/theme.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cwp-template-aws/template/common/apps/theme/theme.ts#L36) file.
 
@@ -149,8 +176,10 @@ In the page editor, when dropping a block onto the page canvas, the block's widt
 
 Prior to this release, the list of revisions in the revisions tab would show the revisions from oldest to newest. This has now been changed, and the revisions are now shown from newest to oldest.
 
-<Image src={pbFixesRevisionsList} title={"List of Revisions - Revisions Now Shown From Latest to Oldest"} />
-
+<Image
+  src={pbFixesRevisionsList}
+  title={"List of Revisions - Revisions Now Shown From Latest to Oldest"}
+/>
 
 #### Fixed Setting Background Image on Page Elements ([#3378](https://github.com/webiny/webiny-js/pull/3378))
 
@@ -180,7 +209,10 @@ Trying to select **Custom Access** will result in an alert message being shown, 
 
 To upgrade to **Business** tier, users [link their project](/docs/wcp/link-a-project) with [Webiny Control Panel (WCP)](/docs/wcp/overview), from where they can activate the Advanced Access Control Layer (AACL) for their project. By doing this, users will be able to define fine-grained permissions for individual Webiny apps.
 
-<Image src={aaclCustomAccess} title={"Selecting Custom Access with Advanced Access Control Layer (AACL) Enabled"} />
+<Image
+  src={aaclCustomAccess}
+  title={"Selecting Custom Access with Advanced Access Control Layer (AACL) Enabled"}
+/>
 
 Finally, for the most advanced use cases, users can upgrade to the **Enterprise** tier. On top of the features available with the first two tiers, the **Enterprise tier** introduces the brand new **Teams** feature, enabling users to group users into teams and easily have them linked with one or more roles.
 
@@ -195,7 +227,6 @@ The Advanced Access Control Layer (AACL) and the three tiers outlined above are 
 More specifically, Webiny instances that were deployed prior to this release will still be able to rely on the mentioned **Custom Access** option upon defining permissions for individual Webiny apps, without having to upgrade to Business tier.
 
 On the other side, unless the Business or Enterprise tier has been enabled, all newly deployed Webiny instances will automatically start with the **Open Source** tier. This means the **Custom Access** option will not be available upon defining permissions for individual Webiny apps. To enable this feature, users will have to upgrade to the Business or Enterprise tier.
-
 
 ### Renaming Security Groups to Security Roles
 
@@ -230,7 +261,7 @@ Note that this trigger requires the user to manually set up Google Analytics on 
 
 ### Form Submissions Now Also Include Query Parameters ([#3124](https://github.com/webiny/webiny-js/pull/3124))
 
-Previously, when a form was submitted, the query parameters were not included in the submission data. With this release, we've changed this behavior. 
+Previously, when a form was submitted, the query parameters were not included in the submission data. With this release, we've changed this behavior.
 
 The query parameters that were present upon submitting the form will now also be included in the form submission data. This means that, for example, users can now easily track the source of the form submission, by simply adding the `utm_source` query parameter when linking to a page that contains the form.
 
@@ -252,4 +283,22 @@ Note that this information is also available when exporting form submissions, al
     }
   }
 }
+```
+
+## Development
+
+### Add "onTenantAfterInstall" Lifecycle Event ([#3377](https://github.com/webiny/webiny-js/pull/3377))
+
+We've introduced a new lifecycle event which you should use when you need to hook into the tenant installation process. This event is published when all applications have finished installing, so you don't have to think about the order of application installation.
+
+More and more of our business and enterprise users are utilizing the programmatic capabilities of Webiny. They're creating data propagation mechanisms, default data setup scripts, etc., and they need a reliable way to know when a tenant is ready to be interacted with. This lifecycle event gives you a reliable entry point for this type of things.
+
+An example of such a plugin would look like this:
+
+```ts
+new ContextPlugin(context => {
+  context.tenancy.onTenantAfterInstall.subscribe(() => {
+    // Here you can reliably access Webiny apps, create data, etc.
+  });
+});
 ```
