--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -14,10 +14,10 @@ import aaclTeams from "./assets/aacl-teams.png";
 import aaclRolesRename from "./assets/aacl-roles-rename.png";
 import fbDateTimeField from "./assets/fb-date-time-field.png";
 import fbGaTrigger from "./assets/fb-ga-trigger.png";
-import pbFixesButtonCursor from "./assets/pb-fixes-button-cursor.png"
-import pbFixesRevisionsList from "./assets/pb-fixes-revisions-list.png"
-import pbFixesLinkedIn from "./assets/pb-fixes-linked-in.png"
-import pbCellMirroring from "./assets/pb-cell-mirroring.png"
+import pbFixesButtonCursor from "./assets/pb-fixes-button-cursor.png";
+import pbFixesRevisionsList from "./assets/pb-fixes-revisions-list.png";
+import pbFixesLinkedIn from "./assets/pb-fixes-linked-in.png";
+import pbCellMirroring from "./assets/pb-cell-mirroring.png";
 import hcmsCreateNewContentModel from "./assets/hcms-create-new-content-model.png";
 import hcmsDropAndSaveTheRte from "./assets/hcms-drop-and-save-the-rich-text-field.png";
 import hcmslexicalEditor from "./assets/hcms-lexical-editor.png";
@@ -28,7 +28,6 @@ import hcmsRemoveFeatureFlag from "./assets/hcms-remove-feture-flag.png";
 import fmGridView from "./assets/fm-grid-view.png";
 import fmTableView from "./assets/fm-table-view.png";
 import fmFileDetails from "./assets/fm-file-details.png";
-
 
 <GithubRelease version={"5.37.0"} />
 
@@ -53,34 +52,45 @@ This release marks a major milestone for our File Manager app. We've made signif
 
 All of these improvements take our File Manager to the next level. But the big change that enabled us to do many of the things listed above, is under the hood of it all: File Manager is now powered by our own Headless CMS! Each file record is actually a content entry under the hood, which means that File Manager API supports all the same querying capabilities as our Headless CMS.
 
+<Alert type="info" title={"Files Migration Included!"}>
+  This release comes with a data migration which will automatically migrate all of your existing files to CMS records, which will immediately make them available in the new File Manager!
+</Alert>
+
 ## Headless CMS
 
-### Introduction to Lexical Editor 
+### Introduction to Lexical Editor
+
 With this release, we are introducing the Lexical Editor for the Headless CMS. We are bringing the same rich text editing experience from the Page Builder to the CMS Rich Text field. Now, the text editing experience will be consistent across the Webiny ecosystem.
 
 To start using the Lexical editor, first, create a new content model.
+
 <Image src={hcmsCreateNewContentModel} title={"Add new model"} />
 
 Drop and save the Rich Text field.
+
 <Image src={hcmsDropAndSaveTheRte} title={"Add new Rich Text field to the model"} />
 
 Next, click on the **View Content** button, add a new entry, and start writing your content.
+
 <Image src={hcmslexicalEditor} title={"Lexical editor in action"} />
 
 ### Deprecating Legacy Rich Text (Editorjs) Editor
+
 With an introduction to the new Lexical editor, the old (EditorJs) Rich Text editor will become deprecated.
 
 What does that mean?
+
 - This legacy editor by default will not appear in the new models and Rich Text fields.
 - We will no longer be maintaining or developing features for this editor.
 - The legacy editor will only appear for the content created by this editor.
-<Image src={hcmsLegacyRteLook} title={"The Legacy Rich Text Editor"} />
+  <Image src={hcmsLegacyRteLook} title={"The Legacy Rich Text Editor"} />
 
+#### Legacy Rich Text Editor Support After the Upgrade
 
-#### Legacy Rich Text Editor Support After the Upgrade 
 After the upgrade to the new 5.37.0 version, we will still support the legacy editor.
 
 Here is how it works.
+
 - Legacy Rich Text editor will appear for the existing content.
 - For the new models, you can choose between the Legacy (EditorJs) and Lexical Rich Text editors. We **recommend** Lexical Editor to write your next content.
 - We use the feature flag **allowCmsLegacyRichTextInput** to support both editors.
@@ -89,18 +99,28 @@ hcmsFieldSettingRemovedFeatureFlag
 hcmsRemoveFeatureFlag from "./asset
 
 In the Rich Text field settings form, click the **Appearance tab** you will see this message:
-<Image src={hcmsFieldSettingWithFeatureFlag} title={"Support of the Legacy Rich Text editor after upgrade"} />
+
+<Image
+  src={hcmsFieldSettingWithFeatureFlag}
+  title={"Support of the Legacy Rich Text editor after upgrade"}
+/>
 
 That means the **feature flag** is set in the project to support the Legacy Rich Text editor as option for the new models.
 **Remove the feature flag** and Lexical editor will be default editor for the Rich Text field (recommended).
 
 As shown in the screenshot, in the **root** of project open **webiny.project.ts** and remove the feature flag.
+
 <Image src={hcmsRemoveFeatureFlag} title={"Remove the feature flag"} />
-Now, after removing the feature flag, create a new model and drop the new Rich Text field. You can see now
-that Lexical Editor is the default option in the field settings.
-<Image src={hcmsFieldSettingRemovedFeatureFlag} title={"Lexical editor as default Rich Text field option in Headless CMS"} />
+Now, after removing the feature flag, create a new model and drop the new Rich Text field. You can see
+now that Lexical Editor is the default option in the field settings.
+<Image
+  src={hcmsFieldSettingRemovedFeatureFlag}
+  title={"Lexical editor as default Rich Text field option in Headless CMS"}
+/>
 <Alert title={"After removing the feature flag..."} type={"info"}>
-By removing the feature flag, the legacy Rich Text editor will no longer appear as a choice for the new models and fields. Still, the legacy editor will appear for the existing content created by this editor.
+  By removing the feature flag, the legacy Rich Text editor will no longer appear as a choice for
+  the new models and fields. Still, the legacy editor will appear for the existing content created
+  by this editor.
 </Alert>
 
 ## Page Builder
