feat: add sections on responsive theme-level styles

--- a/src/docs/5.34.x/page-builder/theming/best-practices.mdx
+++ b/src/docs/5.34.x/page-builder/theming/best-practices.mdx
@@ -129,6 +129,14 @@ export const HeroSectionWithTheme = styled("div")(
 );
 ```
 
+<Alert type={"info"}>
+
+  Need to define responsive styles for theme-level styles, like typography or colors? Responsive styles can also be defined via the theme object. 
+  
+  For more information, please refer to the [Responsive Styles](/docs/{version}/page-builder/theming/theme-object#responsive-styles) section.
+
+</Alert>
+
 ### Styling Custom Page Elements
 
 Most often, styles for [custom page elements](/docs/{version}/page-builder/extending/create-a-page-element) are introduced via one or more standalone [Emotion styled components](https://emotion.sh/docs/styled), included with the page element code.
