wip: legacy rte topic moved from changelog to upgrade guide

--- a/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.37.0/upgrade-guide.mdx
@@ -5,6 +5,9 @@ description: Learn how to upgrade Webiny from 5.36.x to 5.37.0.
 
 import { Alert } from "@/components/Alert";
 import { AdditionalNotes } from "@/components/upgrade/AdditionalNotes";
+import hcmsFieldSettingWithFeatureFlag from "./assets/hcms-field-setting-feature-flag-set.png";
+import hcmsFieldSettingRemovedFeatureFlag from "./assets/hcms-field-settings-removed-flag.png";
+import hcmsRemoveFeatureFlag from "./assets/hcms-remove-feture-flag.png";
 
 <Alert type={"danger"}>
 
@@ -78,3 +81,40 @@ new ContextPlugin(context => {
   });
 });
 ```
+
+### Legacy Rich Text Editor Support After the Upgrade
+
+After the upgrade to the new 5.37.0 version, we will still support the legacy editor.
+
+Here is how it works.
+
+- Legacy Rich Text editor will appear for the existing content.
+- For the new models, you can choose between the Legacy (EditorJs) and Lexical Rich Text editors. We **recommend** Lexical Editor to write your next content.
+- We use the feature flag **allowCmsLegacyRichTextInput** to support both editors.
+
+In the Rich Text field settings form, click the **Appearance tab** you will see this message:
+
+<Image
+  src={hcmsFieldSettingWithFeatureFlag}
+  title={"Support of the Legacy Rich Text editor after upgrade"}
+/>
+
+That means the **feature flag** is set in the project to support the Legacy Rich Text editor as option for the new models.
+**Remove the feature flag** and Lexical editor will be default editor for the Rich Text field (recommended).
+
+As shown in the screenshot, in the **root** of project open **webiny.project.ts** and remove the feature flag.
+
+<Image src={hcmsRemoveFeatureFlag} title={"Remove the feature flag"} />
+Now, after removing the feature flag, create a new model and drop the new Rich Text field. You can see
+now that Lexical Editor is the default option in the field settings.
+<Image
+  src={hcmsFieldSettingRemovedFeatureFlag}
+  title={"Lexical editor as default Rich Text field option in Headless CMS"}
+/>
+<Alert title={"After removing the feature flag..."} type={"info"}>
+  By removing the feature flag, the legacy Rich Text editor will no longer appear as a choice for
+  the new models and fields. Still, the legacy editor will appear for the existing content created
+  by this editor.
+</Alert>
+
+
