fix: replace Storage ID with `storageId`

--- a/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
+++ b/src/docs/5.33.x/headless-cms/extending/content-models-via-code-storage-id.mdx
@@ -20,15 +20,15 @@ If you created your project with Webiny **v5.33.0** or later, you can skip the u
 
 ## Overview
 
-As we introduced CMS Model Field aliases in v5.33.0, we introduced a new property on our CMS Model Field definitions, the `Storage ID` (`storageId`) property.
+As we introduced CMS Model Field aliases in v5.33.0, we introduced a new property on our CMS Model Field definitions, the `storageId` property.
 
-### What Is the `Storage ID` Used For?
+### What Is the `storageId` Used For?
 
 We use it as the storage path for the given field value in the record. As `fieldId` is now changeable, we cannot store values by the `fieldId` value because it would result in the data loss each time the `fieldId` value has changed.
 
-### How Is the `Storage ID` Generated?
+### How Is the `storageId` Generated?
 
-The `Storage ID` field comprises out of the field `type` property (`text`, `number`, `object`, etc...) and the `id` property, which is generated via the `nanoid` library.
+The `storageId` field comprises out of the field `type` property (`text`, `number`, `object`, etc...) and the `id` property, which is generated via the `nanoid` library.
 
 Here are few examples how the `storageId` property value looks like this:
 
