fix: simplify HCMS Lexical Editor section

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -56,21 +56,19 @@ All of these improvements take our File Manager to the next level. But the big c
 
 ## Headless CMS
 
-### Introduction to Lexical Editor
+### Introducing Lexical Editor For the Rich Text Field
 
-With this release, we are introducing the Lexical Editor for the Headless CMS. We are bringing the same rich text editing experience from the Page Builder to the CMS Rich Text field. Now, the text editing experience will be consistent across the Webiny ecosystem.
+With this release, we are introducing the new Lexical Editor for the Headless CMS's rich text field. We are bringing the same rich text editing experience that you are used to from the Page Builder application, to the Headless CMS.
+
 <Image src={hcmslexicalEditor} title={"Lexical editor in action"} />
 
-### Deprecating Legacy Rich Text (Editorjs) Editor
+Note that with the introduction to the new Lexical editor, the old rich text editor (based on ([Editor.js](https://editorjs.io/))) will become deprecated. This means the following:
 
-With an introduction to the new Lexical editor, the old (EditorJs) Rich Text editor will become deprecated.
-
-What does that mean?
-
-- This legacy editor by default will not appear in the new models and Rich Text fields.
-- We will no longer be maintaining or developing features for this editor.
-- The legacy editor will only appear for the content created by this editor.
-  <Image src={hcmsLegacyRteLook} title={"The Legacy Rich Text Editor"} />
+- users will no longer be able to use the legacy editor with new content models and Rich Text fields
+- we will no longer be maintaining or developing features for this editor
+- the legacy editor will only appear when the content was created using it
+  
+<Image src={hcmsLegacyRteLook} title={"The Legacy Rich Text Editor"} />
 
 ## Page Builder
 
