fix: simplify HCMS Lexical Editor section

--- a/src/docs/shared/release-notes/5.37.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.37.0/changelog.mdx
@@ -62,11 +62,19 @@ With this release, we are introducing the new Lexical Editor for the Headless CM
 
 <Image src={hcmslexicalEditor} title={"Lexical editor in action"} />
 
+We believe the new editor will significantly improve the content editing experience for content editors. It is also a great step towards our goal of unifying the content editing experience across all of Webiny's applications. 
+
+<Alert type={"info"}>
+
+  Released with [Webiny 5.35.0](/docs/release-notes/5.35.0/changelog#introducing-a-brand-new-text-editor-3147), the Lexical rich text editor was initially introduced into Webiny's Page Builder application.
+
+</Alert>
+
 Note that with the introduction to the new Lexical editor, the old rich text editor (based on ([Editor.js](https://editorjs.io/))) will become deprecated. This means the following:
 
 - users will no longer be able to use the legacy editor with new content models and Rich Text fields
 - we will no longer be maintaining or developing features for this editor
-- the legacy editor will only appear when the content was created using it
+- the legacy editor will only appear when the content was initially created with it
   
 <Image src={hcmsLegacyRteLook} title={"The Legacy Rich Text Editor"} />
 
